chore: add tsc-alias

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
     "baseUrl": ".",
     "paths": {
       "@app/*": ["src/*"]
-    }
+    },
+    "declaration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/**/*.test.ts"]
 }
