--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "inject-interceptor",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc -w & tsc-alias -w",
+    "build": "tsc && tsc-alias",
+    "test": "jest --passWithNoTests",
+    "lint": "eslint src --ext ts --resolve-plugins-relative-to . && npm run prettier-check",
+    "prettier": "prettier --ignore-path .eslintignore --write \"./**/*.ts\" \"./**/*.json\"",
+    "prettier-check": "prettier --ignore-path .eslintignore --check \"./**/*.ts\" \"./**/*.json\"",
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,22 +23,19 @@
   },
   "homepage": "https://github.com/unitless-io/inject-interceptor#readme",
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
     "@tsconfig/node16": "^1.0.2",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.13",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.7.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
@@ -42,7 +45,6 @@
     "@babel/parser": "^7.17.3",
     "@babel/traverse": "^7.17.3",
     "@babel/types": "^7.17.0",
-    "md5.js": "^1.3.5",
     "ramda": "^0.28.0"
   }
 }
