--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "inject-interceptor",
+  "name": "@unitless-io/inject-interceptor",
   "version": "0.0.1",
-  "description": "inject-interceptor",
+  "description": "Unitless Inject Interceptor",
   "main": "index.js",
   "scripts": {
     "start": "tsc -w & tsc-alias -w",
