--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@babel/parser": "^7.17.3",
     "@babel/traverse": "^7.17.3",
     "@babel/types": "^7.17.0",
+    "@unitless-io/local-db": "git+https://github.com/unitless-io/local-db.git#develop",
     "md5.js": "^1.3.5",
     "ramda": "^0.28.0"
   }
