feat: add TS support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "paths": {
       "@app/*": ["src/*"]
     },
+    "resolveJsonModule": true,
     "declaration": true
   },
   "include": ["src/**/*"],
